--- a/index.css
+++ b/index.css
@@ -13,17 +13,23 @@ header {
 }
 
 div {
+    height: auto;
     margin-left: 20px;
     margin-top: 300px;
+    margin-bottom: 100px;
 }
 
 footer {
     background-color: #EEEEEE;
     position: fixed;
+    height: 20px;
     width: 100%;
     bottom: 0px;
 }
 
 footer p {
+    margin: 0;
+    margin-top: 3px;
     margin-left: 20px;
+    font-size: 10px;
 }
